--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "ajv": "^6.5.4",
     "axios": "^0.16.2",
     "classnames": "^2.2.6",
     "google-maps-react": "^2.0.2",
     "history": "^4.7.2",
+    "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.4",
     "nouislider": "^12.0.0",
