--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.5.2",
     "react-geocode": "^0.1.2",
     "react-google-maps": "^9.4.5",
+    "react-stripe-checkout": "^2.6.3",
     "serve-favicon": "^2.5.0"
   },
   "scripts": {
